# Onsite-Blackboard-Code-Interview

./: README.md
DockerCircles2017-DriveAI/P1/: Description.md
KMP probability/: Description.md
KMP probability/src/: kmp_next_step.cpp  programming.cpp
KMP probability/tests/: canonical_eg.in
KMP-Probability/: makefile
KMP-Probability/include/: kmp.h  kmp_next_step.hpp  programming.hpp
KMP-Probability/src/: exceptions.cpp  exceptions.hpp  kmp.c  kmp.h  logging.cpp  logging.hpp  main.cpp  programming.cpp  programming.hpp
KMP-Probability/tests/: canonical_eg.out
MonkeyStepsPivot20170713/: Description.md  makefile
MonkeyStepsPivot20170713/include/: monkey_step.hpp
MonkeyStepsPivot20170713/src/: main.cpp  monkey_step.cpp
StockPrice20170612-AmazonGlobal/secondRound/: Description.md  makefile
airbnb/P1/: CMakeLists.txt  README.md
airbnb/P1/cmake/: Utils.cmake
airbnb/P1/python/: CMakeLists.txt  setup.py  setup.py.in
airbnb/P1/python/lib/: solution.py
airbnb/P2/: CMakeLists.txt
airbnb/P2/cmake/: OpenCV.cmake  PCL.cmake
airbnb/P2/config/: cmake_config.h  cmake_config.h.in
airbnb/P2/scripts/: build.sh
airbnb/P2/scripts/thirdparties/github.com/: install_gtests.sh
airbnb/P2/src/modules/graph/: .CMakeLists.txt.swp  CMakeLists.txt  graph.h
airbnb/P2/src/modules/solutions/: CMakeLists.txt  README.md  diff_tree.cpp  diff_tree.hpp
airbnb/P2/src/modules/utils/: api.h
airbnb/P2/src/modules/utils/log/: logging.cpp  logging.hpp
airbnb/P2/src/modules/utils/random/: distribution.cpp
airbnb/P2/xcode/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
airbnb/P2/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  Continuous_cmakeRulesBuildPhase.makeDebug  Experimental_cmakeRulesBuildPhase.makeRelease  NightlyMemoryCheck_cmakeRulesBuildPhase.makeDebug  Nightly_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
airbnb/P2/xcode/airbnb_P2.build/Debug/ALL_BUILD.build/: Script-CE5010F43166479CB3B19759.sh  dgph
airbnb/P2/xcode/airbnb_P2.build/Debug/ZERO_CHECK.build/: Script-8BEE0EF81F284E3589A50600.sh  dgph
airbnb/P2/xcode/airbnb_P2.xcodeproj/: project.pbxproj
airbnb/P2/xcode/airbnb_P2.xcodeproj/project.xcworkspace/xcuserdata/wangyi.xcuserdatad/: UserInterfaceState.xcuserstate
airbnb/P2/xcode/airbnb_P2.xcodeproj/xcuserdata/wangyi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
airbnb/P2/xcode/airbnb_P2.xcodeproj/xcuserdata/wangyi.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Continuous.xcscheme  Experimental.xcscheme  Nightly.xcscheme  NightlyMemoryCheck.xcscheme  RUN_TESTS.xcscheme  ZERO_CHECK.xcscheme  common.xcscheme  diff_tree_cli.xcscheme  graph.xcscheme  xcschememanagement.plist
airbnb/P2/xcode/lib/Debug/: libcommon.dylib  libgraph.dylib
airbnb/P2/xcode/src/modules/graph/: CTestTestfile.cmake  cmake_install.cmake
airbnb/P2/xcode/src/modules/graph/CMakeScripts/: graph_postBuildPhase.makeDebug  graph_postBuildPhase.makeMinSizeRel  graph_postBuildPhase.makeRelWithDebInfo  graph_postBuildPhase.makeRelease
airbnb/P2/xcode/src/modules/graph/airbnb_P2.build/Debug/graph.build/: Script-4C55FA86914A4638868E95AA.sh  dgph
airbnb/P2/xcode/src/modules/graph/airbnb_P2.build/Debug/graph.build/Objects-normal/x86_64/: graph.LinkFileList  graph.d  graph.dia
airbnb/P2/xcode/src/modules/solutions/: CTestTestfile.cmake  cmake_install.cmake
airbnb/P2/xcode/src/modules/solutions/airbnb_P2.build/Debug/diff_tree_cli.build/: dgph
airbnb/P2/xcode/src/modules/solutions/airbnb_P2.build/Debug/diff_tree_cli.build/Objects-normal/x86_64/: diff_tree.d  diff_tree.dia  diff_tree_cli.LinkFileList
airbnb/P2/xcode/src/modules/utils/: CTestTestfile.cmake  cmake_install.cmake
airbnb/P2/xcode/src/modules/utils/CMakeScripts/: common_postBuildPhase.makeDebug  common_postBuildPhase.makeMinSizeRel  common_postBuildPhase.makeRelWithDebInfo  common_postBuildPhase.makeRelease
airbnb/P2/xcode/src/modules/utils/airbnb_P2.build/Debug/common.build/: Script-EADCF446F4824E71B921BAE8.sh  dgph
airbnb/P2/xcode/src/modules/utils/airbnb_P2.build/Debug/common.build/Objects-normal/x86_64/: common.LinkFileList  distribution.d  lambda.d  logging.d  logging.dia
airbnb/P2/xcode/tests/gtest/: CTestTestfile.cmake  cmake_install.cmake
apollo/cpp/: CMakeLists.txt
apollo/cpp/src/modules/gl/: CMakeLists.txt  Camera.cpp  Camera.hpp  FirstPersonControls.cpp  FirstPersonControls.hpp  IMPROVED_MESH.cpp  IMPROVED_MESH.h  MeshViewer.cpp  MeshViewer.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  viewer.cpp  viewer.hpp
apollo/cpp/src/modules/gl/primitives/: Axis.cpp  Axis.h
apollo/cpp/src/modules/solutions/: CMakeLists.txt  FastFourSum.cpp  FastFourSum.hpp  Google201906.md  README.md  Roborock Shanghai Software Team Interview Exam (Chinese).docx  Roborock Shanghai Software Team.md  StoneTech.md  The_Maze.md  Twenty_Four_Game.md  find_circles.cpp  find_circles.hpp  find_path.cpp  find_path.hpp  find_sum.cpp  find_sum.hpp  floyd_path_tp.cpp  integral_map.cpp  kway-sorting.cpp  kway-sorting.hpp  linear_scanning_cli.cpp  lucky_draw_stone_tech.cpp  lucky_draw_stone_tech.hpp  quick_linked_sort.cpp  quick_sort.cpp  quick_sort.hpp  string_mtch.cpp  the_maze.cpp  twenty_four.cpp  twenty_four_incorrect.cpp  unique_path.cpp
apollo/cpp/src/modules/solutions/algorithms/: linear_scanning.cpp  linear_scanning.hpp  segment_tree.cpp  segment_tree.hpp
apollo/cpp/src/modules/utils/: CMakeLists.txt  api.h
apollo/cpp/src/modules/utils/lambda/: lambda.cpp  lambda.hpp
apollo/cpp/src/modules/utils/log/: logging.cpp
apollo/cpp/src/modules/utils/random/: distribution.hpp
apollo/cpp/tests/gtest/: CMakeLists.txt  testMain.cpp  test_lucky_draw_benchmark.cpp
compiler/: Description.md
compiler/ArithmeticParser/: Makefile  main.cpp
compiler/RegualrExpresionParser/: Algorithm for NT.doc  Regex.cpp  test.cpp
findErrors201510-Google/: Description.md  main.cpp  makefile
parenthesisMtch20161108-DSFS/: CPPMakefile.env  Description.md  grading.sh  makefile  testExecuter.cpp
(+223 files in other folders)
